[package]
name = "imgdist"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
directories = "6.0.0"
flexi_logger = "0.29.8"
kamadak-exif = "0.6.1"
log = "0.4.22"
redb = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.9.8"
walkdir = "2.5.0"
fnv = "1.0.7"

[target.'cfg(target_os = "linux")'.dependencies]
mountinfo = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
nix = "0.30"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }
